<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".DetailFragment">

    <EditText
        android:id="@+id/item_name"
        style="@style/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="30dp"
        android:isScrollContainer="true"
        android:background="@color/white"
        tools:text="item name"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:autofillHints="item name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="50dp"
        android:background="@color/white">


        <ImageButton
            android:id="@+id/decrease_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/remove"
            android:backgroundTint="@color/blueberry_200"
            android:contentDescription="@string/decrease_item"/>

        <EditText
            android:id="@+id/item_count"
            style="@style/itemCount"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:maxHeight="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/count"
            android:autofillHints="item count"
            android:isScrollContainer="true"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/increase_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/add"
            android:backgroundTint="@color/blueberry_200"
            android:contentDescription="@string/increase_item" />
    </LinearLayout>

    <EditText
        android:id="@+id/item_description"
        style="@style/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:isScrollContainer="true"
        android:maxHeight="200dp"
        android:inputType="textMultiLine"
        android:autofillHints="item description"
        tools:text="description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <ImageButton
            android:id="@+id/remove_item"
            android:layout_width="66dp"
            android:layout_height="78dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/delete"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/remove_item"/>

        <ImageView
            android:id="@+id/update_item_button"
            android:layout_width="66dp"
            android:layout_height="78dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/done"
            android:contentDescription="@string/update"
            android:background="@color/white"/>

    </RelativeLayout>

</LinearLayout>