<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RegisterFragment"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:src="@drawable/winvetory"
        app:layout_constraintBottom_toTopOf="@+id/u_name_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo" />

    <EditText
        android:id="@+id/u_name_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:autofillHints="username"
        app:layout_constraintBottom_toTopOf="@+id/u_match_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />

    <EditText
        android:id="@+id/u_match_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_match"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u_name_login" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/blueberry_400"
        android:minHeight="48dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:text="@string/no_acct"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingStart="0dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_up"
        android:textColor="@color/blueberry_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>