<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/blueberry_200">


    <TextView
        android:id="@+id/id_Label"
        style="@style/itemListLabel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/blueberry_200"
        android:text="@string/id"
        app:layout_constraintBottom_toTopOf="@+id/item_list"
        app:layout_constraintEnd_toStartOf="@+id/name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_label"
        style="@style/itemListLabel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/blueberry_200"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/item_list"
        app:layout_constraintStart_toEndOf="@+id/id_Label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_label"
        style="@style/itemListLabel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/blueberry_200"
        android:text="@string/qty"
        app:layout_constraintBottom_toTopOf="@+id/item_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:name="org.snhu.inventoryapp.ItemListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context="org.snhu.inventoryapp.MainActivity"
        tools:listitem="@layout/list_item_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_item"
        android:backgroundTint="#36F49B"
        app:tint="@color/blueberry_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/add" />

</androidx.constraintlayout.widget.ConstraintLayout>